# social-kursweb-archive

./: Cargo.toml
schema/: Register_social_leverans.xml  schema-social.xsd
src/: main.rs
