[package]
name = "bakestuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
encoding = "0.2.33"
lazy-regex = "2.3.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slug = "0.1.4"
urlencoding = "2.1.0"
xml-rs = "0.8.4"
